# AIOps-Autopilot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  REPORT-real-v2.md  REPORT-real.md  REPORT.md  commands  pyproject.toml
benchmark_results_real/: report.md  results.json
benchmark_results_real/traces/: ablation_raw_bad_config_rollout.json  ablation_raw_config_rollout_worker_wedge.json  ablation_raw_db_outage_ambiguous.json  ablation_raw_db_pool_exhaustion.json  ablation_raw_downstream_timeout.json  ablation_raw_expired_credential.json  ablation_raw_queue_consumer_stall.json  ablation_raw_worker_scaled_to_zero.json  baseline_bad_config_rollout.json  baseline_config_rollout_worker_wedge.json  baseline_db_outage_ambiguous.json  baseline_db_pool_exhaustion.json  baseline_downstream_timeout.json  baseline_expired_credential.json  baseline_queue_consumer_stall.json  baseline_worker_scaled_to_zero.json  (+8 more)
benchmark_results_real_v2/: report.md  results.json
dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.js
deployment/: DEPLOYMENT.md  docker-compose.yml  ecs-cloud-init.sh
docs/: DEPLOY-RUNBOOK.md  architecture.md  mcp.md
sandbox/: docker-compose.yml
tests/: conftest.py  scenario_data.py  test_api.py  test_benchmark.py  test_deploy_smoke.py  test_fault_library.py  test_knowledge_store.py  test_llm_client.py  test_mcp_servers.py  test_metering.py  test_models.py  test_pipeline_ingestion.py  test_pipeline_loop.py  test_pipeline_triage.py  test_runner_unit.py  test_sandbox_integration.py
(+83 files in other folders)
